# readme-lhs-test

./: .gitignore  hie.yaml  readme-lhs-test.cabal  readme.md  stack.yaml
app/: example.lhs  readme-lhs-test.hs
